# what flags you want to pass to the C compiler & linker
AM_CFLAGS = --pedantic -Wall
AM_CXXFLAGS = --pedantic -Wall -std=c++0x
AM_LDFLAGS =

# this lists the binaries to produce, the (non-PHONY, binary) targets in
# the previous manual Makefile
bin_PROGRAMS = test_train
test_train_SOURCES = test_train.cc rail_route.hh rail_route.cc train.hh train.cc

